[package]
name = "egui_replay"
version = "0.1.0"
authors = ["..."]
edition = "2021"
rust-version = "1.70.0"
license = "..."

[dependencies]
# Egui world
egui = "0.32"
egui_plot = "0.32"
egui_extras = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # Add X11 support
] }
epaint = "0.32"
emath = "0.32"

#Time
chrono = "0.4"
chrono-tz = "0.10"

# Randomness
rand = "0.8"
getrandom = "0.2"

# Tools
itertools = "0.14"
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"

# WebSocket
fastwebsockets = { version = "0.10.0", features = [
    "upgrade",
] } # faster websockets

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1.11"
rustls-pemfile = "2.2.0"
rustls-native-certs = "0.8"
# For securely clearing sensitive data (keys, passwords) from memory.
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }

# Mermaid diagrams in documentation
simple-mermaid = "0.2.0"
# Async runtime (Features docs: https://docs.rs/tokio/latest/tokio/#feature-flags)
tokio = { version = "1.47.1", features = [
    "net",             # Needed for network IO (TCPStream and such)
    "rt-multi-thread", # Runtime that allows us to spawn tasks
    "fs",              # File system related functionality
    "macros",          # Macros - tokio::main
    "signal",          # For tokio::signal (such as unix sigkill)
] }
# Support for TLS in Tokio
tokio-rustls = { version = "0.26.2", features = ["ring"] }
# utils that bridge io between STD and Tokio eg: AsyncRead VS Read
hyper-util = { version = "0.1.16", features = ["tokio"] }
# Util for http handling
hyper = { version = "1.6", features = ["server", "http1"] }
http-body-util = "0.1.3"
# Vectors optimized for small collections and inline
smallvec = "1.11"

# Other dependencies
wgpu = { version = "0.20", features = ["webgpu", "webgl"] }
ringbuffer = "0.15.0"
lazy_static = "1.4"
parking_lot = "0.12"
url = "2.4"
unwrap_let = "0.1.0"
# Serialization libs
bincode = { version = "2.0.1", features = ["derive", "serde"] }

# ------------- native dependencies -------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
